# simple-parser

./: .qmake.conf  CMakeLists.txt  README.md  simplecmdiobaseConfig.cmake.in  sync.profile
.github/workflows/: buildAndTest.yml
app-autorun/app/: CMakeLists.txt
app-autorun/doc/: autorun-example
app-autorun/lib/: CMakeLists.txt
app-example/: CMakeLists.txt  cmdparserexample.cpp
lib-client/lib/: CMakeLists.txt  simplecmdioclient.cpp  simplecmdioclient.h  tasksimplesendreceive.cpp  tasksimplesendreceive.h  tasksimplesendreceivetransparent.cpp  tasksimplesendreceivetransparent.h
lib-client/tests/: CMakeLists.txt  test_simplecmdioclient.cpp  test_simplecmdioclient.h
lib-client/tests/test-data/: help-response.txt
lib-server/lib/: CMakeLists.txt  cmdclient.cpp  cmdclient.h  cmdhandlerbase.h  cmdparserbase.cpp  cmdparserbase.h  cmdserver.cpp  cmdserver.h
lib-server/testlib/: CMakeLists.txt  testcmdiohandler.h
lib-server/tests/: CMakeLists.txt  test_testcompleteserver.cpp  test_testcompleteserver.h
simpleautorun/app/: CMakeLists.txt
simpleautorun/doc/: simpleautorun.md
simpleautorun/lib/: cmdparserfile.cpp
simplecmdio-client/lib/: simplecmdioclient.cpp  taskopenconnection.cpp
simplecmdio-client/tests/: CMakeLists.txt
simplecmdiobase/lib/: cmdclient.h
simplecmdiobase/testlib/: CMakeLists.txt  testcmdiocompleteserver.cpp  testcmdiohandler.cpp  testcmdioparser.cpp
simpleexample/: cmdparserexample.h  main.cpp
src/: CMakeLists.txt  src.pro
src/cmd-io/: cmd-io-lib.pri  cmd-io.pro  cmdhandlerbase.cpp  cmdhandlerbase.h  cmdparserbase.cpp  cmdparserbase.h  cmdserver.cpp
src/cmdiobase/: cmdclient.cpp  cmdclient.h  cmdhandlerbase.cpp  cmdhandlerbase.h  cmdiobase-lib.pri  cmdiobase.pro  cmdparserbase.cpp  cmdparserbase.h  cmdserver.cpp  cmdserver.h
src/simple_cmdio/: cmdclient.cpp  cmdclient.h  cmdhandlerbase.cpp  cmdparserbase.cpp  cmdparserbase.h  cmdserver.h  simple_cmdio-lib.pri  simple_cmdio.pro  simple_cmdio_global.h
src/simpleautorun/: CMakeLists.txt  cmdhandlerfile.cpp  cmdhandlerfile.h  cmdparserfile.cpp  cmdparserfile.h  commonhelpers.cpp  commonhelpers.h  main.cpp  simpleautorun.md  simpleautorun.pro  simpleautorunlibConfig.cmake.in
src/simpleautorun/doc/: autorun-example-expected  simpleautorun.odt
src/simpleautorun/lib/: cmdhandlerfile.cpp
src/simplecmdio-client/lib/: CMakeLists.txt  simplecmdioclient.h  taskopenconnection.cpp  taskopenconnection.h  tasksimplesendreceive.cpp  tasksimplesendreceive.h
src/simplecmdio-client/tests/: CMakeLists.txt  test_task_open.cpp  test_task_open.h  test_task_simpleio.cpp  test_task_simpleio.h
src/simplecmdiobase/: CMakeLists.txt  QSimpleCmdHandlerBase  QSimpleCmdServer  SimpleCmdioBaseConfig.cmake.in  cmdclient.cpp  cmdclient.h  cmdhandlerbase.cpp  cmdhandlerbase.h  cmdparserbase.cpp  cmdparserbase.h  cmdserver.cpp  cmdserver.h  simplecmdiobase-lib.pri  simplecmdiobase.pro  simplecmdiobaseConfig.cmake.in  simplecmdiobase_global.h
src/simplecmdiobase/lib/: CMakeLists.txt  QSimpleCmdParserSocketBase
src/simplecmdiobase/testlib/: CMakeLists.txt  testcmdiocompleteserver.h  testcmdiofacade.cpp  testcmdiofacade.h  testcmdiohandler.cpp  testcmdiohandler.h  testcmdioparser.cpp  testcmdioparser.h
src/simpleexample/: CMakeLists.txt  cmdhandlerexample.cpp  cmdhandlerexample.h  cmdparserexample.cpp  cmdparserexample.h  main.cpp  simpleexample.pro
tests/auto/cmake/: CMakeLists.txt  cmake.pro
